--- a/h/sass/inject.scss
+++ b/h/sass/inject.scss
@@ -103,7 +103,7 @@
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
   &.annotator-collapsed {
-    margin-left: -$heatmap-width - 10px;
+    margin-left: -$heatmap-width - 17px;
   }
 }
 
@@ -143,8 +143,9 @@
 @media screen and (min-width: 37.5em) {
   .annotator-frame {
     @include single-transition(margin-left, .4s);
-    width: 428px + $heatmap-width + 10px;
-    margin-left: -428px - $heatmap-width - 10px;
+    width: 428px + $heatmap-width + 17px;
+    margin-left: -428px - $heatmap-width - 17px;
+    &.annotator-collapsed { width: inherit; }
   }
 }
 
